--- a/src/sass/components/_Navbar.scss
+++ b/src/sass/components/_Navbar.scss
@@ -1,9 +1,59 @@
-.navbar {
+.nav {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  padding: 0.75rem 2rem;
+  padding: 0.75rem 1rem;
   background: $off-white;
   z-index: 1;
+
+  &__left {
+    float: left;
+  }
+
+  &__right {
+    float: right;
+  }
+
+  &__btn {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+  }
+
+  &__icon {
+    font-size: 2.5rem;
+    color: $primary-color;
+    width: 3rem;
+    height: 3rem;
+  }
+
+  &__links,
+  &__links-show {
+    height: 0;
+    overflow: hidden;
+    transition: $main-transition;
+    list-style-type: none;
+
+    &-show {
+      height: 10rem;
+    }
+
+    a {
+      display: block;
+      text-decoration: none;
+      padding: 1rem 0;
+      color: $main-black;
+      transition: $main-transition;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 600;
+      letter-spacing: $main-spacing;
+
+      &:hover {
+        color: $primary-color;
+      }
+    }
+  }
 }
