--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -4,3 +4,21 @@
   right: 1rem;
   transform: translate(-50%, -50%);
 }
+
+.btn-primary {
+  display: inline-block;
+  text-decoration: none;
+  letter-spacing: $main-spacing;
+  color: $main-black;
+  background: $primary-color;
+  padding: 0.4rem 0.9rem;
+  border: 3px solid $primary-color;
+  transition: $main-transition;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background: transparent;
+  color: $primary-color;
+}
