--- a/src/sass/components/_Hero.scss
+++ b/src/sass/components/_Hero.scss
@@ -1,10 +1,11 @@
-.defaultHero,
-.roomsHero {
+.hero-default,
+.hero-rooms {
+  position: relative;
   min-height: calc(100vh - 66px);
   background: url("../../images/defaultBcg.jpeg") center/cover no-repeat;
 }
 
-.roomsHero {
+.hero-rooms {
   background-image: url("../../images/room-2.jpeg");
   min-height: 60vh;
 }
