[Services] Added component

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -12,3 +12,13 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+@mixin colwidth {
+  @for $size from 1 through $cols {
+    @for $length from $size through $cols {
+      .col-#{$size}-of-#{$length} {
+        width: calc-col-width($size, $length);
+      }
+    }
+  }
+}
