--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,5 +10,9 @@
 @import "components/Banner";
 @import "components/Hero";
 @import "components/Navbar";
+@import "components/Services";
+@import "components/Title";
+
+@import "layout/grid";
 
 @import "pages/home";
