--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -15,3 +15,9 @@ $main-transition: all 0.3s linear;
 
 // MARGINS
 $main-spacing: 3px;
+
+// GRID
+$cols: 4;
+$grid-width: 100%;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
