--- a/src/sass/components/_Hero.scss
+++ b/src/sass/components/_Hero.scss
@@ -1,7 +1,7 @@
 .hero-default,
 .hero-rooms {
   position: relative;
-  min-height: calc(100vh - 66px);
+  min-height: calc(100vh - 15rem);
   background: url("../../images/defaultBcg.jpeg") center/cover no-repeat;
 }
 
