--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/Hero";
 @import "components/Navbar";
 @import "components/Services";
+@import "components/Slider";
 @import "components/Title";
 
 @import "layout/grid";
