--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,8 @@
 @import "components/Loading";
 @import "components/Navbar";
 @import "components/Room";
+@import "components/RoomFilter";
+@import "components/RoomsList";
 @import "components/Services";
 @import "components/SingleRoom";
 @import "components/Slider";
